fix: Adding ellipsis when text overflow

--- a/server-investme-web/src/main/webapp/resources/css/patterns/components-primefaces.css
+++ b/server-investme-web/src/main/webapp/resources/css/patterns/components-primefaces.css
@@ -205,6 +205,7 @@ body .ui-datepicker .ui-datepicker-calendar td>a, body .ui-datepicker .ui-datepi
 
 .ui-datatable tbody td {
 	width: 275px;
+	text-overflow: ellipsis;
 }
 
 .ui-datatable .ui-datatable-data > tr.ui-state-highlight, .ui-datatable .ui-datatable-data tr.ui-state-highlight:hover {
